# paper-wiki

./: .env.example  .gitignore  .mcp.json  AGENTS.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-18-pdf-ingestion.md
docs/superpowers/specs/: 2026-04-18-pdf-ingestion-design.md
scripts/: fetch-models.sh  start-llama-servers.sh  stop-llama-servers.sh
src/llm_wiki/: __init__.py  cli.py  config.py  dummy_llm.py  embeddings.py  index.py  ingest.py  mcp_server.py  parsers.py  search.py
src/paper_wiki/: __init__.py  cli.py  config.py  index.py  ingest.py  mcp_server.py  parsers.py  reranker.py  search.py
wiki/: index.md  log.md
